# mcp-server-memos-py

./: LICENSE  README.md  hello.py  pyproject.toml
.github/workflows/: release.yaml
proto/: buf.gen.yaml  buf.yaml  gen.sh  update_deps.sh
src/mcp_server_memos/: __init__.py  __main__.py  config.py  server.py
src/mcp_server_memos/proto_gen/google/api/: __init__.py
src/mcp_server_memos/proto_gen/memos/api/v1/: __init__.py
